--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@chakra-ui/react": "^1.8.8",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "8.14.0",
