--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@chakra-ui/react": "^2.0.0-next.3",
     "mongodb": "^4.6.0",
-    "next": "12.1.6",
+    "next": "^15.0.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
-    "request-ip": "^2.2.0"
+    "request-ip": "^3.3.0"
   },
   "devDependencies": {
     "eslint": "8.14.0",
